Fixed z-index of prev and next buttons in ie9.

--- a/ftw/slider/browser/resources/slider.css
+++ b/ftw/slider/browser/resources/slider.css
@@ -41,6 +41,9 @@
 /* @end */
 
 /* @group prev next navi */
+.slick-list {
+  z-index: 1;
+}
 
 .slick-prev, .slick-next {
   display: none !important;
@@ -58,6 +61,7 @@
   border: none;
   background-color: #FFF;
   background-color: rgba(255,255,255,0.5);
+  z-index: 2;
 }
 .slick-prev {
   left: 0;
